Updated default prompts and templates, fixed secret creation issue

--- a/app/templates/home/template.html
+++ b/app/templates/home/template.html
@@ -451,6 +451,7 @@
                                 { name: '${baseline_duration}', description: 'Duration of the baseline test in seconds.' },
                                 { name: '${baseline_start_time}', description: 'Start time of the baseline test.' },
                                 { name: '${baseline_end_time}', description: 'End time of the baseline test.' },
+                                { name: '${overview_data_table_}', description: 'Overview data table for BE and FE test results.' },
                             ],
                             backendVariables: [
                                 { name: '${aggregated_data_table_}', description: 'Aggregated metrics table for backend tests. No aggregation type needed.' },
