--- a/app/templates/home/tests.html
+++ b/app/templates/home/tests.html
@@ -369,7 +369,7 @@
 
                             items.forEach(cfg => {
                                 const makeOption = (bucketName, labelSuffix = null) => {
-                                    const isV18Listener = cfg.listener === 'org.apache.jmeter.visualizers.backend.influxdb.InfluxdbBackendListenerClient_v1.8';
+                                    const isV18Listener = cfg.listener.includes('v1.8');
                                     const valueObj = {
                                         id: cfg.id,
                                         name: cfg.name,
@@ -718,7 +718,7 @@
                         const dataSource = document.getElementById('dataSourceId').value;
                         const dataSourceJson = JSON.parse(dataSource);
                         btn.textContent = 'ML Report';
-                        if (dataSourceJson.listener === 'sitespeed_influxdb_v2') {
+                        if (dataSourceJson.listener === 'sitespeed_influxdb_v2' || dataSourceJson.listener === 'sitespeed_influxdb_v1.8') {
                             btn.classList.add('disabled');
                         } else {
                             btn.href = `/report?test_title=${encodeURIComponent(test.test_title)}&source_type=${encodeURIComponent(dataSourceJson.source_type)}&id=${encodeURIComponent(dataSourceJson.id)}&bucket=${encodeURIComponent(dataSourceJson.bucket)}`;
