Added initial settings UI

--- a/app/templates/includes/sidebar.html
+++ b/app/templates/includes/sidebar.html
@@ -18,7 +18,7 @@
             const projectBlock = `
                 <li class="project-specific-item"><h5 class="dropdown-header" style="text-align: center;">Current project</h5><span class="dropdown-item-text" style="text-align: center; color: grey; display: block; padding: 0.25rem 1rem;">${projectName}</span></li>
                 <li class="project-specific-item"><hr class="dropdown-divider"></li>
-                <li class="project-specific-item"><a class="dropdown-item" href="/choose-project"><i class="fas fa-exchange-alt me-2"></i>Change Project</a></li>
+                <li class="project-specific-item"><a class="dropdown-item" href="/choose-project"><i class="fas fa-exchange-alt me-2"></i>Change project</a></li>
                 <li class="project-specific-item"><hr class="dropdown-divider"></li>
             `;
             const settingsMenu = $('.settings-dropdown .dropdown-menu');
@@ -101,6 +101,10 @@
                             <i id="themeIcon" class="fas fa-sun me-2"></i>Theme
                         </button>
                     </li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="/advanced-settings">
+                        <i class="fas fa-sliders-h me-2"></i>Advanced settings
+                    </a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="/register">
                         <i class="fas fa-user-plus me-2"></i>Add user
